# Verona

./: README.md
RWStudio_plug-ins/SamplePluginPA10/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  qrc_resources.cpp
RWStudio_plug-ins/SamplePluginPA10-build/: CMakeCache.txt  Makefile  RoVi1PluginPA10.cbp  cmake_install.cmake  ui_SamplePlugin.h
RWStudio_plug-ins/SamplePluginPA10-build/src/: moc_SamplePlugin.cpp  moc_SamplePlugin.cpp_parameters
RWStudio_plug-ins/SamplePluginPA10/backgrounds/: color1.ppm  color2.ppm  color3.ppm  lines1.ppm  texture1.ppm  texture2.ppm  texture3.ppm
RWStudio_plug-ins/SamplePluginPA10/markers/: Marker2a.ppm  Marker2b.ppm  Marker3.ppm
RWStudio_plug-ins/SamplePluginPA10/motions/: MarkerMotionFast.txt  MarkerMotionMedium.txt  MarkerMotionSlow.txt  test.txt
RWStudio_plug-ins/SamplePluginPA10/src/: SamplePlugin.cpp  SamplePlugin.cpp.back  SamplePlugin.hpp  SamplePlugin.hpp.back  SamplePlugin.ui  color.cpp  color.hpp  moc_SamplePlugin.cpp  moc_SamplePlugin.cpp_parameters
RWStudio_plug-ins/debug/: 12-12-2017  13-12-2017  13-12-2017.2  15-12-2017  KinTree_&_frameInfo.txt
RWStudio_plug-ins/genfiles/: GlobalStats  test1_med_joints.csv  test1_med_toolPose_R.csv  test1_slow_toolPose_P.csv  test1_slow_toolPose_R.csv  test3_med_joints.csv  test3_med_toolPose_P.csv  test3_slow_toolPose_P.csv  test3_slow_toolPose_R.csv
doc/src/: rovi1_system.drawio
feature_extraction/marker2/genfiles/: 20-Nov-2017-RESULTS-COLOR-EASY.txt  21-Nov-2017-RESULTS-COLOR-HARD.txt  22-Nov-2017-RESULTS-COLOR-EASY.txt  22-Nov-2017-RESULTS-COLOR-HARD.txt  Points_to_Track.txt  Points_to_Track_hard.txt  theory_script.txt
feature_extraction/marker2/morp_operations/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color_tracking  morp.cpp
feature_extraction/marker2/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color_tracking  main.cpp
feature_extraction/marker3/genfiles/: 24-11-2017-EASY.txt  25-11-2017-HARD.txt  good_matches.txt  good_matches_hard.txt  theory_script.txt
feature_extraction/marker3/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  keypoint_tracking  main.cpp
gazebo_models/: README.md
gazebo_models/cathedral_background/: model.config  model.sdf
gazebo_models/cathedral_background/meshes/: cathedral_background.dae
perception_servoing/: CMakeLists.txt  package.xml
perception_servoing/include/perception_servoing/: perception.h
perception_servoing/src/: perception.cpp
planning_servoing/: CMakeLists.txt  package.xml
planning_servoing/include/planning_servoing/: planning_servoing.h
planning_servoing/nodes/: marker_trajectory_node.cpp  planning_servoing_node.cpp
planning_servoing/src/: planning_servoing.cpp
rovi1_demo_manager/: CMakeLists.txt  package.xml
rovi1_demo_manager/config/: default.rviz  moveit_config.yaml  planner_params.yaml  vision_server_params.yaml
rovi1_demo_manager/launch/: planner.launch  scene_gazebo.launch  vision_server.launch
vision_interface/vision_lib/: CMakeLists.txt  package.xml
vision_interface/vision_lib/include/vision_lib/: vision_utils.h
vision_interface/vision_lib/src/: vision_utils.cpp
vision_interface/vision_lib_msgs/: CMakeLists.txt  package.xml
vision_interface/vision_lib_msgs/srv/: BasicService.srv
vision_interface/vision_server_ros/: CMakeLists.txt  package.xml
vision_interface/vision_server_ros/include/vision_server_ros/: vision_server_ros.h
vision_interface/vision_server_ros/src/: vision_server_ros.cpp  vision_server_ros_node.cpp
workcell_scene_description/: package.xml
workcell_scene_description/meshes/: marker.dae  marker.ppm
workcell_scene_description/urdf/: marker.urdf.xacro  workcell.urdf.xacro
workcell_scene_description/worlds/: demo.world
