<?xml version="1.0"?>
<package format="2">
  <name>perception_servoing</name>
  <version>0.0.0</version>
  <description>The perception_servoing package</description>

  <maintainer email="cavie17@student.sdu.com">Carlos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>

</package>