<?xml version="1.0"?>
<package format="2">
  <name>vision_lib_msgs</name>
  <version>0.0.0</version>
  <description>The vision_lib_msgs package</description>

  <maintainer email="carlos.viescas@tecnalia.com">Carlos</maintainer>
  <license>Commercial Tecnalia</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
