<?xml version="1.0"?>
<package format="2">
  <name>vision_server_ros</name>
  <version>0.0.0</version>
  <description>The vision_server_ros package</description>

  <maintainer email="cavie17@student.sdu.com">Carlos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>eigen</depend>
  <depend>vision_lib</depend>
  <depend>vision_lib_msgs</depend>
  <depend>perception_servoing</depend>

  <export>
  </export>

</package>